# Spearman

./: .gitignore  CMakeLists.txt  Hero.cpp  Hero.h  LICENSE  Makefile  Room.cpp  Room.h  Spearman UCP.sln  Spearman UCP.vcxproj  Spearman_case 26-1.docx  Stage.cpp  Stage.h  Textures.cpp  Textures.h  main.cpp  project.api
Dependencies/WinBGIm/: CMakeLists.txt
Spearman UCP/Release/: Spearman UCP.exe.recipe  Spearman UCP.iobj  Spearman UCP.ipdb
Spearman UCP/Release/Spearman UCP.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Spearman UCP.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
src/: Hero.cpp  Hero.h  Room.cpp  Room.h  Stage.cpp  Stage.h  Textures.cpp  Textures.h  dungeon.cpp  dungeon.h  enemy.cpp  enemy.h  floor.cpp  floor.h  game.cpp  game.h  main.cpp  state.h
src/audio/: audio_manager.h  miniaudio_audio_manager.cpp  miniaudio_audio_manager.h  sound.h
src/input/: input_manager.h  input_types.h  winapi_input_manager.cpp  winapi_input_manager.h
src/rendering/: renderer.h  rendering_type.h  sprite.h  sprite_factory.cpp  sprite_factory.h  winbgim_renderer.cpp  winbgim_renderer.h  winbgim_sprite.cpp  winbgim_sprite.h
src/resource_manager/: resource_manager.cpp  resource_manager.h
src/window/: winbgim_window.cpp  winbgim_window.h  window.h
